--- a/FrontEnd_GUI/Tims/src/index.html
+++ b/FrontEnd_GUI/Tims/src/index.html
@@ -1,14 +1,14 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" class="h-100">
 <head>
   <meta charset="utf-8">
   <title>Tims</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="assets/img/logo.png">
 </head>
-<body>
-  <app-root></app-root>
+<body class="h-100">
+  <app-root  class="d-flex flex-column h-100"></app-root>
 </body>
 </html>
